5/13/2006 Bob Rossi <bob@brasko.net>

        * src/cgdb.c (rlctx_send_user_command): Make sure to update the
	source window location after the user types a command in the 
	GDB window.
	(start_gdb): Update to match new TGDB interface.

4/27/2006 Bob Rossi <bob@brasko.net>

	* src/Makefile.am (cgdb_LDADD): Modify libs.

4/23/2006 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (rlctx_send_user_command): Added redraw of tgdb prompt.
4/14/2006 Bob Rossi <bob@brasko.net>

	* src/cgdbrc.c (#include <strings.h): Fix compile warning.

4/10/2006 Bob Rossi <bob@brasko.net>

	* src/Makefile.am (PKGDATADIR): Added.
	* src/Makefile.in: Autogenerated.
	* src/cgdb.c (#include "helptext.h"): Removed.
	(cgdb_help_file): Removed.
	(create_help_file): Removed.
	(main): Remove call to create_help_file.
	* src/interface.c (if_display_help): Display help from installed 
	directory.

version 0.6.2 (04/09/2006):

4/05/2006 Bob Rossi <bob@brasko.net>

	* src/cgdb.c (init_readline): Pass slavefd to tty_off_xon_xoff 
	instead of masterfd. This works on solaris, and is probably more
	correct.

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* lib/Makefile.in: Autogenerated.
	* src/Makefile.in: Autogenerated.

version 0.6.1 (03/06/2006):

3/06/2006 Bob Rossi <bob@brasko.net>

	* include/helptext.h: Autogenerated.

3/05/2006 Bob Rossi <bob@brasko.net>

	* include/interface.h (get_gdb_height, if_clear_line): Added proto's.
	* src/interface.c (get_gdb_height): Removed static keyword.
	(if_clear_line): Added definition.
	* src/cgdb.c (sys_util.h): Added include.
	(is_tab_completing): Add comment.
	(enum tab_completion_state, struct tab_completion_ctx): Added types.
	(completion_ptr): Add global object.
	(tab_completion_create, tab_completion_destroy, cgdb_get_y_or_n, 
	handle_tab_completion_request, readline_completion_display_func):
	Added functions.
	(do_tab_completion): Added comments.
	(start_gdb): Remove unused variables.
	(user_input): Rewrote to clean up.